--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "axios": "^1.2.0",
     "change-case": "^4.1.2",
     "date-fns": "^2.29.3",
+    "dayjs": "^1.11.11",
     "emoji-picker-react": "^4.7.12",
     "firebase": "^10.4.0",
     "framer-motion": "^7.6.12",
